# 2004-MQTT

./: .gitignore  .gitmodules  BIDIRECTIONAL_GUIDE.md  CMakeLists.txt  DASHBOARD_README.md  INSTALL_PIOASM.md  Integration-Testing.txt  QUICK_START.md  README.md  TESTING_CHECKLIST.md  TESTING_PROCEDURE.md  TEST_COVERAGE_ANALYSIS.md  WORKING_SETUP.md  block_transfer.c  block_transfer.h  build_and_flash.ps1  dashboard.html  draft.md  lwipopts.h  main.c  main.py  mqtt_sn_client.c  mqtt_sn_client.h  mqttsn_adapter.c  mqttsn_adapter.h  mqttsn_client.c  mqttsn_client.h  mqttsn_client_example.c  mqttsn_client_example.h  network_config_base.h  network_errors.h  paho_pub.c  paho_sub.c  python_mqtt_gateway.py  receive_image.py  sd_card.c  sd_card.h  server.c  setup_mqtt_gateway.ps1  setup_mqtt_gateway.sh  (+20 more)
MQTT/: CMakeLists.txt
MQTT/mqtt_sn_client/: CMakeLists.txt  CMakeLists_test.txt  lwipopts.h  main.c  mqtt_sn_client.c  mqtt_sn_client.h  mqtt_sn_messages.c  mqtt_sn_test.h  mqtt_sn_test_messages.c  simple_test.c  test_main.c
MQTT/mqtt_sn_client/arch/: cc.h  sys_arch.c  sys_arch.h
bridge-scripts/: multicast_to_unicast_bridge.py  unicast_receiver_bridge.py  wsl_multicast_capture.sh  wsl_multicast_forwarder.py
dashboard/: DASHBOARD_README.md  PRESENTATION_GUIDE.md  dashboard.html  dashboard_server.py  requirements.txt
gateway/: CMakeLists.txt  README.md  main.c  mqtt_paho.c  mqtt_paho.h  mqtt_sn.h
guides/: 1-GATEWAY_SETUP.md  2-GATEWAY_RUNNING.md  3-CONNECTING_PICO.md  GATEWAY_SETUP.md
include/drivers/: block_transfer.h  udp_driver.h  wifi_driver.h
include/protocol/mqttsn/: mqttsn_adapter.h  mqttsn_client.h
lib/mqtt-sn/: MQTTSNConnect.h  MQTTSNConnectServer.c  MQTTSNPacket.h  MQTTSNSearchClient.c  MQTTSNSerializePublish.c
pico-mqttsn/: CMakeLists.txt
pico-mqttsn/copy/: lwipopts copy.h  main copy 2.c  main copy.c
pico-mqttsn/src/: lwipopts.h  main.c  mqttsn.h  mqttsn_client.c  mqttsn_client.h  net_udp.c  net_udp.h
pico-mqttsn/udp_testing/: .u  udp_listener.py
received/: receive_blocks.py
src/app/: main.c  subscriber_main.c
src/drivers/: block_transfer.c  block_transfer.c.backup  sd_card.c  udp_driver.c  wifi_driver.c
src/protocol/mqttsn/: mqttsn_adapter.c  mqttsn_client.c
test/: Integration-Testing.md  Unit-Testing.md
test-scripts/: WSL_MULTICAST_SOLUTION.md  check_network_connectivity.py  test_unicast_sender.py
test/intergrated-tests/: AUTOMATION_SUMMARY.md  QUICK_START.md  README_AUTOMATED_TESTS.md  TEST_CHECKLIST.md  run_automated_tests.py  serial_monitor.py  test_it10_topic_registration_after_disconnect_automated.py  test_it11_wifi_connection_automated.py  test_it12_sd_card_operations.py  test_it12_sd_card_operations_automated.py  test_it1_qos0_message_delivery.py  test_it2_qos1_message_delivery.py  test_it3_qos1_retry.py  test_it3_qos1_retry_automated.py  test_it4_qos1_dropped_connection.py  test_it4_qos1_dropped_connection_automated.py  test_it6_block_transfer_fragment_loss_automated.py  test_it7_topic_registration_automated.py  test_it7_topic_registration_automated_reduced.py  test_it8_topic_subscription.py  test_it9_wifi_auto_reconnect_automated.py
test/system-tests/: test_st1_end_to_end_flow.py  test_st2_broker_to_pico.py  test_st3_performance.py  test_st3_performance_publisher.py  test_st4_power_cycle_recovery.py  test_st5_packet_loss_simulation.py
test/unit-tests/: test_config.py  test_ut1_udp_transmission.py  test_ut2_timeout_handling.py  test_ut3_microsd_performance.py
test_scripts/: IT10_topic_registration_after_disconnect.py  IT11_wifi_connection.py  IT5_block_transfer.py  IT6_block_transfer_fragment_loss.py  IT7_topic_registration.py  IT9_wifi_auto_reconnect.py  README.md
tools/: paho_pub.c  paho_sub.c
wifi/: CMakeLists.txt  mqtt_sn_client.c  mqtt_sn_client.h  picow_wifi.c  udp_driver.c  wifi.c  wifi.h  wifi_config.h  wifi_config_base.h
wifi_driver/wifi_driver/: CMakeLists.txt  lwipopts.h  main.c  mqtt_sn_client.c  mqtt_sn_client.h  mqttsn_test.py  udp_server.py  wifi_driver.c  wifi_driver.h
wifi_driver/wifi_driver/lib/mqtt-sn/: MQTTSNPacket.c  MQTTSNUnsubscribe.h:Zone.Identifier
